--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         canvas{
-            width: auto;
+            width: 100%;
         }
     </style>
 </head>
